# run-for-org

./: .gitignore  AUTHEN.md  README.md  REQUIREMENTS.md  dex-config.yaml  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 197307be6f42_initial_migration.py  4f19bb30fc45_add_firstname_lastname_to_users.py
backend/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/routers/: auth.py  stats.py  users.py
backend/tests/: conftest.py  test_api.py  test_auth_callback.py  test_oidc_auth.py
